--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Amazing innovated (no cap) realtime-chat app builded with React TypeScript, Express, PlanetScale, Prisma " />
-    <title>Vite + React + TS</title>
+    <title>Realtime-chat</title>
   </head>
   <body>
     <div id="root">
